# Search_Engine

./: .gitmodules  AVLTree.h  CMakeLists.txt  CountingWord.cpp  CountingWord.h  README.md  documentParser.cpp  documentParser.h  indexHandler.cpp  indexHandler.h  main.cpp  queryEngine.cpp  queryEngine.h  rapidJSONExample.cpp  savedTree.txt  searchEngine.cpp  searchEngine.h  test.cpp
sample_data/coll_1/: news_0064568.json
savedTree/: AUTHOR.txt  DATE.txt  TITLE.txt  totalKEYWORD.txt  totalORG.txt  totalPERSON.txt  treeKEYWORDs.txt  treeORGs.txt  treePERSONs.txt
